# talentflow-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  logger.py  main.py  schemas.py  services.py  utils.py
backend/routers/: evaluate.py  interview.py  jobs.py  resumes.py
frontend/: app.py  config.py  styles.py
frontend/views/: evaluate.py  generator.py  home.py  interview.py  screener.py
project_folder structure/: setup_modular_backend.py  setup_modular_frontend.py
